// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`document modules with component embeds > a container lifted around an embed > react nests the embed in its containers 1`] = `
"import Embed0 from "/doc.mg?embed=0";

export const metadata = {};
export const toc = [];

export function Component() {
  return (
    <>
      <div className={"card \\"quoted\\""} data-impact={"{\\"all\\":{\\"after\\":0.524}}"}>
        <ol>
          <li className={"task"} dangerouslySetInnerHTML={{ __html: "one" }} />
          <li>
            <div style={{ display: 'contents' }} dangerouslySetInnerHTML={{ __html: "two" }} />
            <Embed0 />
          </li>
        </ol>
      </div>
    </>
  );
}
export default Component;"
`;

exports[`document modules with component embeds > a container lifted around an embed > svelte nests the embed in its containers 1`] = `
"<script lang="ts" module>
export const metadata = {};
export const toc = [];
</script>
<script lang="ts">
import Embed0 from "/doc.mg?embed=0";
</script>
<div class={"card \\"quoted\\""} data-impact={"{\\"all\\":{\\"after\\":0.524}}"}>
  <ol>
    <li class={"task"}>
      {@html "one"}
    </li>
    <li>
      {@html "two"}
      <Embed0 />
    </li>
  </ol>
</div>"
`;

exports[`document modules with component embeds > a container lifted around an embed > vue nests the embed in its containers 1`] = `
"<script lang="ts">
export const metadata = {};
export const toc = [];
</script>
<script setup lang="ts">
import Embed0 from "/doc.mg?embed=0";
const html = ["one","two"];

defineExpose({ metadata, toc });
</script>

<template>
  <div>
    <div class="card &quot;quoted&quot;" data-impact="{&quot;all&quot;:{&quot;after&quot;:0.524}}">
      <ol>
        <li class="task" v-html="html[0]"></li>
        <li>
          <div style="display: contents" v-html="html[1]"></div>
          <Embed0 />
        </li>
      </ol>
    </div>
  </div>
</template>"
`;

exports[`document modules with component embeds > wires html embeds into the document module 1`] = `
"
export const metadata = {"title":"Embed HTML Test"};
export const html = "<h1 id=\\"testing-html-embeds\\">Testing HTML Embeds</h1>\\n<figure class=\\"chart\\"><figcaption>Inline markup</figcaption></figure>\\n<p>Text after the embed.</p>\\n";
export const toc = [{"level":1,"title":"Testing HTML Embeds","id":"testing-html-embeds"}];

export default { metadata, html, toc };"
`;

exports[`document modules with component embeds > wires react embeds into the document module 1`] = `
"import Embed0 from "<fixtures>/embed-react.mg?embed=0";
import Embed1 from "<fixtures>/embed-react.mg?embed=1";
import Embed2 from "<fixtures>/embed-react.mg?embed=2";

export const metadata = {"title":"Embed React Test"};
export const toc = [{"level":1,"title":"Testing React Embeds","id":"testing-react-embeds"},{"level":1,"title":"Multiple Embeds","id":"multiple-embeds"},{"level":1,"title":"Content After Embeds","id":"content-after-embeds"}];

export function Component() {
  return (
    <>
      <div style={{ display: 'contents' }} dangerouslySetInnerHTML={{ __html: "<h1 id=\\"testing-react-embeds\\">Testing React Embeds</h1>\\n<p>This is a counter component:</p>\\n" }} />
      <Embed0 />
      <div style={{ display: 'contents' }} dangerouslySetInnerHTML={{ __html: "<h1 id=\\"multiple-embeds\\">Multiple Embeds</h1>\\n<p>First embed:</p>\\n" }} />
      <Embed1 />
      <div style={{ display: 'contents' }} dangerouslySetInnerHTML={{ __html: "<p>Second embed:</p>\\n" }} />
      <Embed2 />
      <div style={{ display: 'contents' }} dangerouslySetInnerHTML={{ __html: "<h1 id=\\"content-after-embeds\\">Content After Embeds</h1>\\n<p>This text comes after the embeds.</p>\\n" }} />
    </>
  );
}
export default Component;"
`;

exports[`document modules with component embeds > wires svelte embeds into the document module 1`] = `
"<script lang="ts" module>
export const metadata = {"title":"Embed Test"};
export const toc = [{"level":1,"title":"Testing Svelte Embeds","id":"testing-svelte-embeds"},{"level":1,"title":"Multiple Embeds","id":"multiple-embeds"},{"level":1,"title":"Content Between Embeds","id":"content-between-embeds"}];
</script>
<script lang="ts">
import Embed0 from "<fixtures>/embed.mg?embed=0";
import Embed1 from "<fixtures>/embed.mg?embed=1";
import Embed2 from "<fixtures>/embed.mg?embed=2";
import Embed3 from "<fixtures>/embed.mg?embed=3";
</script>
{@html "<h1 id=\\"testing-svelte-embeds\\">Testing Svelte Embeds</h1>\\n<p>This is a counter component:</p>\\n"}
<Embed0 />
{@html "<h1 id=\\"multiple-embeds\\">Multiple Embeds</h1>\\n<p>First embed:</p>\\n"}
<Embed1 />
{@html "<p>Second embed:</p>\\n"}
<Embed2 />
{@html "<h1 id=\\"content-between-embeds\\">Content Between Embeds</h1>\\n<p>This text is between two embed blocks.</p>\\n"}
<Embed3 />
{@html "<p>This text comes after the third embed.</p>\\n"}"
`;

exports[`document modules with component embeds > wires vue embeds into the document module 1`] = `
"<script lang="ts">
export const metadata = {"title":"Embed Vue Test"};
export const toc = [{"level":1,"title":"Testing Vue Embeds","id":"testing-vue-embeds"},{"level":1,"title":"Content After Embeds","id":"content-after-embeds"}];
</script>
<script setup lang="ts">
import Embed0 from "<fixtures>/embed-vue.mg?embed=0";
const html = ["<h1 id=\\"testing-vue-embeds\\">Testing Vue Embeds</h1>\\n<p>This is a counter component:</p>\\n","<h1 id=\\"content-after-embeds\\">Content After Embeds</h1>\\n<p>This text comes after the embed.</p>\\n"];

defineExpose({ metadata, toc });
</script>

<template>
  <div>
    <div style="display: contents" v-html="html[0]"></div>
    <Embed0 />
    <div style="display: contents" v-html="html[1]"></div>
  </div>
</template>"
`;
